@@ -10,6 +10,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Jakub Wilk
   Jörg Krause
   Ben Boeckel
+  Paul J. Fenwick
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
